# ai-playground

./: .env.example  .gitignore  README.md  pyproject.toml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/LangChain 与 LangGraph 渐进式学习沙盒/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md  编码规范.md
.qoder/repowiki/knowledge/zh/基于 dotenv 与 Dataclass 的集中式配置管理/: _module.yaml  configuration_system.md
.qoder/repowiki/knowledge/zh/基于 pyproject.toml 的 Python 依赖管理/: _module.yaml  dependency_management.md
.qoder/repowiki/knowledge/zh/错误处理与异常管理策略/: _module.yaml  (+1 more)
.qoder/repowiki/zh/content/: API参考与工具.md  快速开始.md  最佳实践与扩展指南.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qoder/specs/: LangChain_LangGraph_学习路径_task-840.md
01-chat-assistant/: README.md  main.py  streaming.py
02-smart-translator/: README.md  fewshot.py  main.py  models.py
03-text-analyzer/: README.md  main.py  models.py  parallel.py
04-knowledge-base/: README.md  ingest.py  main.py  models.py  retriever.py
04-knowledge-base/data/: sample.txt
05-tool-assistant/: README.md  main.py  models.py  tools.py
06-workflow-engine/: README.md  main.py  nodes.py  state.py
07-react-agent/: README.md  custom_agent.py  main.py  state.py  tools.py
08-persistent-memory/: README.md  checkpointer.py  main.py  state.py
09-code-approval/: README.md  graph.py  main.py  state.py  tools.py
10-dev-team/: README.md  main.py  state.py  supervisor.py  tools.py
10-dev-team/agents/: __init__.py  dev_agent.py  pm_agent.py  tester_agent.py
common/: __init__.py  config.py  llm.py  utils.py
(+79 files in other folders)
