[project]
name = "ai-playground"
version = "0.1.0"
description = "LangChain + LangGraph 渐进式学习路径 — 通过 10 个项目系统学习 LLM 应用开发"
requires-python = ">=3.10"

dependencies = [
    # LangChain 核心
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=1.0.0",
    # LangGraph
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # 工具库
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
